--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="/src/index.js"></script>
+    <script type="text/javascript" src="/src/index.js"></script>
   </body>
 </html>
