--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Dashboard With Core r18</title>
+    <title>Dashboard v3</title>
   </head>
   <body>
     <div id="root"></div>
