--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--
+        OnceHub scheduling integration
+    -->
+    <script type="text/javascript" src="https://cdn.oncehub.com/mergedjs/so.js"></script>
+
     <title>Lucivia Universe</title>
   </head>
   <body>
