--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!--
-        OnceHub scheduling integration
+        Scheduling integration
     -->
-    <script type="text/javascript" src="https://cdn.oncehub.com/mergedjs/so.js"></script>
+    <script id="setmore_script"
+            type="text/javascript"
+            src="https://my.setmore.com/webapp/js/src/others/setmore_iframe.js">
+    </script>
+
 
     <title>Lucivia Universe</title>
 
